--- a/dvc_plots/index.html
+++ b/dvc_plots/index.html
@@ -30,8 +30,8 @@
         "rh": 2.0
     },
     {
-        "r_fpr": 0.0970873786407767,
-        "r_tpr": 0.8235294117647058,
+        "r_fpr": 0.05263157894736842,
+        "r_tpr": 0.9565217391304348,
         "rev": "workspace",
         "rh": 1.0
     },
@@ -79,5 +79,781 @@
     </div>
     
 
+    <div id = "dvc_yaml__confusion">
+        <script type = "text/javascript">
+            var spec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+    "data": {
+        "values": [
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "1",
+        "predication": "1",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    },
+    {
+        "Outcome": "0",
+        "predication": "0",
+        "rev": "workspace"
+    }
+]
+    },
+    "title": "dvc.yaml::confusion",
+    "facet": {
+        "field": "rev",
+        "type": "nominal"
+    },
+    "spec": {
+        "transform": [
+            {
+                "aggregate": [
+                    {
+                        "op": "count",
+                        "as": "xy_count"
+                    }
+                ],
+                "groupby": [
+                    "predication",
+                    "Outcome"
+                ]
+            },
+            {
+                "impute": "xy_count",
+                "groupby": [
+                    "rev",
+                    "predication"
+                ],
+                "key": "Outcome",
+                "value": 0
+            },
+            {
+                "impute": "xy_count",
+                "groupby": [
+                    "rev",
+                    "Outcome"
+                ],
+                "key": "predication",
+                "value": 0
+            },
+            {
+                "joinaggregate": [
+                    {
+                        "op": "max",
+                        "field": "xy_count",
+                        "as": "max_count"
+                    }
+                ],
+                "groupby": []
+            },
+            {
+                "calculate": "datum.xy_count / datum.max_count",
+                "as": "percent_of_max"
+            }
+        ],
+        "encoding": {
+            "x": {
+                "field": "Outcome",
+                "type": "nominal",
+                "sort": "ascending",
+                "title": "Outcome"
+            },
+            "y": {
+                "field": "predication",
+                "type": "nominal",
+                "sort": "ascending",
+                "title": "predication"
+            }
+        },
+        "layer": [
+            {
+                "mark": "rect",
+                "width": 300,
+                "height": 300,
+                "encoding": {
+                    "color": {
+                        "field": "xy_count",
+                        "type": "quantitative",
+                        "title": "",
+                        "scale": {
+                            "domainMin": 0,
+                            "nice": true
+                        }
+                    }
+                }
+            },
+            {
+                "selection": {
+                    "label": {
+                        "type": "single",
+                        "on": "mouseover",
+                        "encodings": [
+                            "x",
+                            "y"
+                        ],
+                        "empty": "none",
+                        "clear": "mouseout"
+                    }
+                },
+                "mark": "rect",
+                "encoding": {
+                    "tooltip": [
+                        {
+                            "field": "Outcome",
+                            "type": "nominal"
+                        },
+                        {
+                            "field": "predication",
+                            "type": "nominal"
+                        }
+                    ],
+                    "opacity": {
+                        "condition": {
+                            "selection": "label",
+                            "value": 1
+                        },
+                        "value": 0
+                    }
+                }
+            },
+            {
+                "transform": [
+                    {
+                        "filter": {
+                            "selection": "label"
+                        }
+                    }
+                ],
+                "layer": [
+                    {
+                        "mark": {
+                            "type": "rect",
+                            "color": "lightpink"
+                        }
+                    }
+                ]
+            },
+            {
+                "mark": "text",
+                "encoding": {
+                    "text": {
+                        "field": "xy_count",
+                        "type": "quantitative"
+                    },
+                    "color": {
+                        "condition": {
+                            "test": "datum.percent_of_max > 0.5",
+                            "value": "white"
+                        },
+                        "value": "black"
+                    }
+                }
+            }
+        ]
+    }
+}
+;
+            vegaEmbed('#dvc_yaml__confusion', spec);
+        </script>
+    </div>
+    
 </body>
 </html>
