--- a/dvc_plots/index.html
+++ b/dvc_plots/index.html
@@ -30,9 +30,21 @@
         "thresh": 0.0
     },
     {
-        "precision": 0.8979591836734694,
+        "precision": 0.9166666666666666,
         "recall": 0.9565217391304348,
         "rev": "workspace",
+        "thresh": 1.0
+    },
+    {
+        "precision": 0.3770491803278688,
+        "recall": 1.0,
+        "rev": "HEAD",
+        "thresh": 0.0
+    },
+    {
+        "precision": 0.8979591836734694,
+        "recall": 0.9565217391304348,
+        "rev": "HEAD",
         "thresh": 1.0
     }
 ]
@@ -86,7 +98,7 @@
         "tpr": 0.0
     },
     {
-        "fpr": 0.06578947368421052,
+        "fpr": 0.05263157894736842,
         "rev": "workspace",
         "th": 1.0,
         "tpr": 0.9565217391304348
@@ -94,6 +106,24 @@
     {
         "fpr": 1.0,
         "rev": "workspace",
+        "th": 0.0,
+        "tpr": 1.0
+    },
+    {
+        "fpr": 0.0,
+        "rev": "HEAD",
+        "th": 2.0,
+        "tpr": 0.0
+    },
+    {
+        "fpr": 0.06578947368421052,
+        "rev": "HEAD",
+        "th": 1.0,
+        "tpr": 0.9565217391304348
+    },
+    {
+        "fpr": 1.0,
+        "rev": "HEAD",
         "th": 0.0,
         "tpr": 1.0
     }
